# mcn-mcp-py

./: README.md  pyproject.toml
mcn_mcp_server/: __init__.py  config.py  mcn_client.py  oidc.py  server.py
